--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.analysis.extraPaths": [
         "./Matching"
-    ]
+    ],
+    "autoDocstring.docstringFormat": "numpy",
+    "autoDocstring.includeName": true
 }
