--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 _Artur_sandbox/
 */backup/
 */__pycache__/
-/Local Files/**/
+
+
+/Local Files/**/*
 !/Local Files/**/
-
-
-
+!/Local Files/.gitkeep
+!/Local Files/**/.gitkeep
 *.pyc
